# loom

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  docker-compose.yml  skills-lock.json
backend/: .env.example  cli.py  pyproject.toml
backend/app/: main.py
backend/app/api/: _registry_validation.py  configs.py  instances.py  jobs.py  preview.py
backend/app/configs/: store.py
backend/app/db/: neo4j_client.py
backend/app/jobs/: runner.py  store.py
backend/app/llm/: ollama_client.py
backend/app/pipeline/: core.py  registry.py  types.py
backend/app/pipeline/sinks/: base.py  (+2 more)
backend/scripts/: check_ollama_connection.py  generate_golden_fixture_snapshot.py
backend/tests/: conftest.py  fakes_jobs.py  golden_fixture_normalize.py  test_api_configs.py  test_api_instances.py  test_api_jobs.py  test_api_preview.py  test_cli.py  test_configs_store.py  test_docx_adapter.py  test_docx_prose_extraction.py  test_fixture_docs_integration.py  test_fixture_vault_integration.py  test_golden_fixture_normalize.py  test_golden_fixture_parity.py  test_incremental_reingestion.py  test_instances_store.py  test_jobs_runner.py  test_jobs_store.py  test_kg_schema.py  test_neo4j_client.py  test_neo4j_sink.py  test_obsidian_adapter.py  test_obsidian_config.py  test_obsidian_parsing.py  test_obsidian_schema.py  test_ollama_client.py  test_pipeline_protocols.py  test_pipeline_run.py  test_prose_extraction_recall.py  test_prose_llm.py  test_registry.py  test_rules_engine.py  test_rules_schema.py
backend/tests/fixtures/: br_requirements.yml  obsidian_config.yml  prose_recall_fixture.yml
(+75 files in other folders)
