[project]
name = "loom-backend"
version = "0.1.0"
description = "Loom backend: document/vault ingestion pipeline into Neo4j and ChromaDB"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.24",
    "pyyaml>=6.0",
    "python-docx>=1.1",
    "jsonschema>=4.21",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
    "types-jsonschema>=4.21",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
packages = ["app"]
strict = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
